# RGFW

./: .gitignore  CMakeLists.txt
cmake/: RGFWConfig.cmake.in
examples/gears/: gears.c
